--- a/manifests/standard/academic.yaml
+++ b/manifests/standard/academic.yaml
@@ -2,33 +2,30 @@
 # ================================================================================================
 # meta-infra - Standard: Academic
 # ================================================================================================
-# 用途：学术工具（笔记、文献管理、Office）
-# 优先级：🟡 推荐（Surface Pro X 主要使用）
+# Academic tools (notes, bibliography, Office)
+# Priority: Recommended (mainly for Surface Pro X)
 # ================================================================================================
 
+$schema: https://aka.ms/configuration-dsc-schema/0.2
 properties:
+  resources:
+    # === Notes & Knowledge Management ===
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: obsidian
+      settings:
+        id: Obsidian.Obsidian
+        source: winget
+
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: anki
+      settings:
+        id: Anki.Anki
+        source: winget
+
+    # === Bibliography Management ===
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: zotero
+      settings:
+        id: DigitalScholar.Zotero
+        source: winget
   configurationVersion: 0.2.0
-
-resources:
-  # === 笔记与知识管理 ===
-  - resource: Microsoft.WinGet.DSC/WinGetPackage
-    id: obsidian
-    settings:
-      id: Obsidian.Obsidian
-      source: winget
-
-  - resource: Microsoft.WinGet.DSC/WinGetPackage
-    id: anki
-    settings:
-      id: Anki.Anki
-      source: winget
-
-  # === 文献管理 ===
-  - resource: Microsoft.WinGet.DSC/WinGetPackage
-    id: zotero
-    settings:
-      id: DigitalScholar.Zotero
-      source: winget
-
-  # === Office 套件 ===
-  # Microsoft 365 - 需要确认 Winget ID
