--- a/manifests/standard/media.yaml
+++ b/manifests/standard/media.yaml
@@ -2,20 +2,17 @@
 # ================================================================================================
 # meta-infra - Standard: Media
 # ================================================================================================
-# 用途：多媒体工具（视频播放、文件转换）
-# 优先级：🟡 推荐
+# Media tools (video player, file conversion)
+# Priority: Recommended
 # ================================================================================================
 
+$schema: https://aka.ms/configuration-dsc-schema/0.2
 properties:
+  resources:
+    # === Video Player ===
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: potplayer
+      settings:
+        id: Daum.PotPlayer
+        source: winget
   configurationVersion: 0.2.0
-
-resources:
-  # === 视频播放 ===
-  - resource: Microsoft.WinGet.DSC/WinGetPackage
-    id: potplayer
-    settings:
-      id: Daum.PotPlayer
-      source: winget
-
-  # === 文件转换 ===
-  # File Converter - 需要查找 Winget ID
